--- a/minha-escola.html
+++ b/minha-escola.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Maria Eduarda</p>
+        <p>Desenvolvido por Gui Lima</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/redesSociaisMinhaEscola.js"></script>
